<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/list_container">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView2"
            >
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/info_layout"
                android:layout_width="match_parent" android:layout_height="match_parent">
            <RelativeLayout
                    style="@style/list_group.one_item">
                <TextView
                        android:text="@string/order_status"
                        android:id="@+id/textView2"
                        style="@style/list_item_title"/>
                <TextView android:text="@string/loading_text"
                          android:id="@+id/status" style="@style/list_item_info.left.oneline"
                          android:layout_toRightOf="@+id/textView2"/>
            </RelativeLayout>
            <LinearLayout
                    android:orientation="vertical"
                    style="@style/list_group"
                    android:id="@+id/scar_name_layout">
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            android:text="@string/client_name"
                            style="@style/list_item_title" android:id="@+id/textView19"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/client_name" android:layout_toRightOf="@+id/textView19"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/client_phone" android:id="@+id/textView1229"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/client_phone"
                            android:textColor="@color/click_blue" android:layout_toRightOf="@+id/textView1229"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/client_type"
                            android:id="@+id/textView20"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/client_type"
                            android:layout_toRightOf="@+id/textView20"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    style="@style/list_group"
                    android:id="@+id/serve_time_layout">
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/make_order_time"
                            android:id="@+id/textView21"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/serve_time"
                            android:layout_toRightOf="@+id/textView21"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/pay_money_time"
                            android:id="@+id/textView22"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/finish_time"
                            android:layout_toRightOf="@+id/textView22"
                            />
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/serve_position"
                            android:id="@+id/textView5"/>
                </RelativeLayout>
                <RelativeLayout style="@style/list_item">
                    <TextView android:text="@string/loading_text"
                              android:id="@+id/position_text"
                              style="@style/list_item_full_line_view.text.multiline"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/remark_4w"
                            android:id="@+id/textView235"/>
                </RelativeLayout>
                <RelativeLayout style="@style/list_item">
                    <TextView android:text="@string/loading_text"
                              android:id="@+id/remark"
                              style="@style/list_item_full_line_view.text.multiline"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    style="@style/list_group">
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/actual_care_item"
                            android:id="@+id/textView14"/>
                </RelativeLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/item_list"
                        style="@style/with_divider">
                </LinearLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/sum_price_4w"
                            android:id="@+id/textView15"
                            android:textColor="@color/info_blue"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="0"
                            android:id="@+id/price_text"
                            android:layout_centerVertical="true" android:layout_alignParentRight="true"
                            android:textColor="@color/info_blue"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="￥"
                            android:id="@+id/textView11"
                            android:layout_toLeftOf="@+id/price_text" android:textColor="@color/info_blue"
                            android:layout_centerVertical="true"/>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/car_area"
                    style="@style/list_group">
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/car_class"
                            android:id="@+id/textView23"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/car_class"
                            android:layout_toRightOf="@+id/textView23"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/car_number"
                            android:id="@+id/textView24"/>
                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/car_id"
                            android:layout_toRightOf="@+id/textView24"/>
                </RelativeLayout>
                <RelativeLayout
                        style="@style/list_item">
                    <TextView
                            style="@style/list_item_title"
                            android:text="@string/car_distance"
                            android:id="@+id/textView25"/>

                    <TextView
                            style="@style/list_item_info.left.oneline"
                            android:text="@string/loading_text"
                            android:id="@+id/car_km"
                            android:layout_toRightOf="@+id/textView25"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>