<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center_horizontal" android:layout_weight="2">
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView2" android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/list_container"
                android:fillViewport="false">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:id="@+id/info_layout">
                <LinearLayout
                        android:orientation="vertical"
                        style="@style/list_group"
                        >
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/serial_id"
                                android:id="@+id/textView3921"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:text="@string/loading_text"
                                android:id="@+id/order_serial_id"
                                android:layout_toRightOf="@+id/textView3921"/>
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/order_status"
                                android:id="@+id/textview12349"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:layout_toRightOf="@id/textview12349"
                                android:text="@string/order_taken"
                                />
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/cancel_reason"
                                android:id="@+id/textview123349"/>
                        <TextView
                                style="@style/list_item_info.left.multiline"
                                android:layout_toRightOf="@id/textview123349"
                                android:text="@string/loading_text"
                                android:id="@+id/cancel_reason"
                                />
                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        style="@style/list_group">
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/client_name"
                                android:id="@+id/textView28"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:id="@+id/client_name"
                                android:text="@string/loading_text"
                                android:layout_toRightOf="@+id/textView28"/>
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/client_phone"
                                android:id="@+id/textView29"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:text="@string/loading_text"
                                android:id="@+id/client_phone"
                                android:textColor="@color/click_blue"
                                android:layout_toRightOf="@+id/textView29"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            style="@style/list_item">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/client_type"
                                style="@style/list_item_title"
                                android:id="@+id/textView172"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/loading_text"
                                android:id="@+id/client_type"
                                android:layout_toRightOf="@+id/textView172"
                                style="@style/list_item_info.left.oneline"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        style="@style/list_group">
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/client_position_4w"
                                android:id="@+id/textView5"/>
                        <TextView
                                style="@style/list_item_info.left.multiline"
                                android:text="@string/loading_text"
                                android:id="@+id/position_text"
                                android:layout_toRightOf="@+id/textView5"/>
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/make_order_time"
                                android:id="@+id/textView3"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:text="@string/loading_text"
                                android:id="@+id/time"
                                android:layout_toRightOf="@+id/textView3"/>
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/appointment_care_time"
                                android:id="@+id/textView11"/>
                        <TextView
                                style="@style/list_item_info.left.oneline"
                                android:text="@string/loading_text"
                                android:id="@+id/appointment_time"
                                android:layout_toRightOf="@+id/textView11"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        style="@style/list_group"
                        >
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_title"
                                android:text="@string/appointment_care_item"
                                android:id="@+id/textView14"/>
                    </RelativeLayout>
                    <RelativeLayout
                            style="@style/list_item">
                        <TextView
                                style="@style/list_item_full_line_view.text.multiline"
                                android:text="@string/loading_text"
                                android:id="@+id/items"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>